<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestión de gasto</string>

    <!--Array SplashScreen-->
    <string-array name="frases">
        <item>Conduce con precaución</item>
        <item>Revisa la presión de tus neumáticos</item>
        <item>Revisa el nivel de aceite y otros liquidos</item>
        <item>Comprueba las pastillas de freno</item>
        <item>Atento a la fecha de la ITV</item>
    </string-array>

    <!--Botones menú principal-->
    <string name="vehiculosButton">Vehículos</string>
    <string name="respostajeButton">Repostaje</string>
    <string name="mantenimientoButton">Mantenimiento</string>
    <string name="impuestosButton">Impuestos/Gastos</string>
    <string name="datosButton">Datos</string>
    <string name="gasolinerasButton">Gasolineras</string>
    <string name="salirButton">Salir</string>


    <!--Titulos de activities-->
    <string name="vehiculosActivity">Vehículos</string>
    <string name="repostajeActivity">Repostaje</string>
    <string name="mantenimientoActivity">Mantenimiento</string>
    <string name="impuestoActivity">Impuestos/Gastos</string>
    <string name="gasolinerasActivity">Gasolineras</string>
    <string name="title_activity_maps">Gasolineras cercanas</string>

    <!--Nuevo vehículo fragment-->
    <string name="instrucciones">Añade los datos de tu vehículo, si lo deseas también
    puedes añadir una fotografía</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="apodo">Apodo o matrícula</string>
    <string name="tipoVehiculo">Tipo de vehículo</string>
    <string name="añadirFotoVehiculo">Añade la foto de tu vehículo (Opcional)</string>
    <string-array name="tipoVehiculoSpinner">
        <item>Coche</item>
        <item>Motocicleta</item>
        <item>Autobus</item>
        <item>Camión</item>
    </string-array>
    <string name="tipoCombustible">Tipo de combustible</string>
    <string-array name="tipoCombustibleSpinner">
        <item>Gasolina</item>
        <item>Diesel</item>
    </string-array>

    <!--Strings Activity respostaje-->
    <string name="vehiculoTV">Vehículo</string>
    <string name="kmActualesTV">KM Actuales</string>
    <string name="tipoLlenadoTV">Tipo de llenado</string>
    <string name="totalTV">Total</string>
    <string name="parcialTV">Parcial</string>
    <string name="costeTV">Coste</string>
    <string name="precioLTV">Precio por litro</string>
    <string name="ticket">Subir una foto del ticket (Opcional)</string>
    <string name="fotoHecha">Se ha realizado la fotografía</string>

    <!--Strings Activity mantenimiento-->
    <string name="operacionTV">Tipo de operación</string>
    <string name="descripcionMantenimiento">Descripción de las acciones</string>
    <string name="factura">Subir una foto de la factura (Opcional)</string>
    <string-array name="tipoOperacionSpinner">
        <item>Mantenimiento</item>
        <item>Avería</item>
    </string-array>

    <!--Strings Activity impuestos/gastos-->
    <string name="conceptoITV">Concepto del gasto</string>
    <string name="cantidadITV">Coste</string>
    <string name="descripcionImpuesto">Descripción del gasto</string>

    <!--Fragment vehiculos-->
    <string name="vehiculos">Vehículos</string>
    <string name="nuevo_vehiculo">Nuevo Vehículo</string>
    <string name="creacionVehiculoOk">El vehículo se ha guardado correctamente</string>

    <!--Dialogs-->
    <string name="borrarVehiculo">Borrar vehículo</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrarVehiculoButton">Borrar</string>

    <string name="editarVehiculo">Editar vehículo</string>
    <string name="editarVehiculoButton">Editar</string>
    <string name="borrarVehiculoOk">El vehículo se ha borrado correctamente</string>
    <string name="editarVehiculoOk">El vehículo se ha editado correctamente</string>

    <!--Comunes-->
    <string name="datosIncompletos">Faltan datos por rellenar</string>
    <string name="litrosTV">Litros</string>
    <string name="fechaButton">Fecha</string>
    <string name="registroOk">El registro se ha creado correctamente</string>

    <!--Permisos-->
    <string name="no_camera">No se puede abrir la cámara sin permisos</string>
    <string name="no_gps">No te hemos podido localizar sin los permisos</string>

    <!--Mapas-->
    <string name="errorDescargaGasolineras">Error al descargar las gasolineras cercanas</string>
    <string name="sinVehiculos">Primero debes crear un vehículo</string>
    <string name="sinFactura">No has guardado ninguna imagen</string>
    <string name="sinBuscar">Primero selecciona un vehiculo y el mes a buscar</string>

    <!--Datos-->

    <string-array name="fechaSpinner">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

</resources>
