<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vehiculoTVRepostaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/vehiculoTV"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/vehiculoSpinnerRepostaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tipoLlenadoTVRepostaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tipoLlenadoTV"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/totalRBRepostaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/totalTV" />

            <RadioButton
                android:id="@+id/parcialRBRepostaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/parcialTV" />

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/kmActualesETRepostaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kmActualesTV"
                android:inputType="number"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/costeETRepostaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/costeTV"
                android:inputType="numberDecimal"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/litrosETRespostaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/litrosTV"
                android:inputType="numberDecimal"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/precioLETRepostaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precioLTV"
                android:inputType="numberDecimal"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <Button
                android:id="@+id/fechaButtonRepostaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fechaButton" />

            <TextView
                android:id="@+id/fechaTVRepostaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/fotoRepostaje"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:src="@drawable/foto" />

            <Button
                android:id="@+id/añadirFotoRepostaje"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.50"
                android:layout_gravity="center"
                android:onClick="camaraGaleria"
                android:text="@string/factura"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/guardarRespostaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="7dp"
            android:src="@drawable/guardar"
            app:fabSize="normal" />

    </LinearLayout>

</ScrollView>
