<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/vehiculoTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehiculoTV"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/vehiculoSpinnerImpuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="@color/black" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/conceptoETImpuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conceptoITV"
                android:textSize="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/costeETImpuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cantidadITV"
                android:inputType="numberDecimal"
                android:textSize="15dp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/descripcionImpuesto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/descripcionImpuesto"
                    android:lines="10"
                    android:padding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <Button
                android:id="@+id/fechaButtonImpuesto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fechaButton" />

            <TextView
                android:id="@+id/fechaTVImpuesto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/fotoImpuestos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:src="@drawable/foto" />

            <Button
                android:id="@+id/añadirFotoImpuestos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.50"
                android:onClick="camaraGaleria"
                android:text="@string/factura"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="horizontal">


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/guardarImpuesto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:src="@drawable/guardar"
                app:fabSize="normal" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>