<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/vehiculoTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehiculoTV"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/vehiculoSpinnerDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/black" />

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/grey_soft">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/ETRepostajeTarjetaDatos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1.70"
                        android:text="@string/respostajeButton"
                        android:textColor="@color/black"
                        android:textSize="21sp" />

                    <ImageView
                        android:id="@+id/IVExpandirRepostajeTarjetaDatos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.30"
                        android:src="@drawable/desplegar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/recicladorRepostajeTarjetaDatos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:scrollbars="vertical"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/IVRecogerRepostajeTarjetaDatos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/recoger"
                        android:layout_gravity="end"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone"/>



                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/ETMantenimientoTarjetaDatos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1.70"
                        android:text="@string/mantenimientoButton"
                        android:textColor="@color/black"
                        android:textSize="21sp" />

                    <ImageView
                        android:id="@+id/IVMantenimientoTarjetaDatos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.30"
                        android:src="@drawable/desplegar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/recicladorMantenientoTarjetaDatos"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:padding="3dp"
                        android:scrollbars="vertical"
                        android:visibility="invisible" />


                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/recicladorImpuestosTarjetaDatos"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:padding="3dp"
                        android:scrollbars="vertical"
                        android:visibility="invisible" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <TextView
                    android:id="@+id/ETImpuestosTarjetaDatos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1.70"
                    android:text="@string/impuestosButton"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <ImageView
                    android:id="@+id/IVImpuestosTarjetaDatos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    android:src="@drawable/desplegar" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>